--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap"
+    rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
@@ -36,7 +37,8 @@
             </h3>
             <span>Data</span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -59,7 +61,7 @@
               </li>
 
             </ul>
-          <!--  <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+            <!--  <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
               <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
             </form> -->
           </div>
@@ -70,7 +72,7 @@
     <!-- slider section -->
     <section id="section04" class="demo slider_section position-relative">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <!--  <ol class="carousel-indicators">
+        <!--  <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -81,9 +83,9 @@
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
-                    <div >
+                    <div>
                       <h1 style="position: relative; top: 50px;">
-                        N U T R I T I O N
+                        N U T R I D A T A 
                       </h1>
                       <br>
                       <br>
@@ -100,9 +102,9 @@
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
-                    <div >
+                    <div>
                       <h1 style="position: relative; top: 50px;">
-                        N U T R I T I O N
+                        N U T R I D A T A 
                       </h1>
                       <br>
                       <br>
@@ -119,9 +121,9 @@
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
-                    <div >
+                    <div>
                       <h1 style="position: relative; top: 50px;">
-                        N U T R I T I O N
+                        N U T R I D A T A 
                       </h1>
                       <br>
                       <br>
@@ -141,59 +143,8 @@
 
   <!-- special section -->
 
-  <!-- <section id="section05" class="demo special_section">
-    <div class="container">
-      <div class="special_container">
-        <div class="box b1">
-          <div class="img-box">
-            <img src="images/award.png" alt="" />
-          </div>
-          <div class="detail-box">
-            <h4>
-              BEST <br />
-              INDUSTRY LEADERS
-            </h4>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-        <div class="box b2">
-          <div class="img-box">
-            <img src="images/study.png" alt="" />
-          </div>
-          <div class="detail-box">
-            <h4>
-              LEARN <br />
-              COURSES ONLINE
-            </h4>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-        <div class="box b3">
-          <div class="img-box">
-            <img src="images/books-stack-of-three.png" alt="" />
-          </div>
-          <div class="detail-box">
-            <h4>
-              BEST <br />
-              LIBRARY & STORE
-            </h4>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- end special section -->
-
   <!-- about section -->
-  <section id="down"class="about_section layout_padding">
+  <section id="down" class="about_section layout_padding">
     <div class="side_img">
       <img src="images/side-img.png" alt="" />
     </div>
@@ -202,7 +153,7 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img  src="images/a-1.jpg" alt="" />
+              <img src="images/a-1.jpg" alt="" />
             </div>
             <div class="img-box b2">
               <img src="images/a-2.jpg" alt="" />
@@ -217,7 +168,9 @@
                 About Our Project
               </h3>
               <p>
-                This project is meant to show in an effective and engaging way the impact of diet on children and teens' behaviour.
+                This project tries to show the world of young people's nutrition and in particular the problems related to it through open data. 
+                The goal is to raise awareness by making best use of the data provided by organizations that strive every day to improve the nutrition, 
+                health and life of children around the world for a better future.
                 <br>
                 Learn more about the project.
               </p>
@@ -335,9 +288,12 @@ nd course section -->
               Amanda Culoma
             </h4>
             <h6 style="text-align: center;">
-              <p style="margin: 1%;">Amanda Culoma was born and raised Pantelleria, graduated in Classical Studies at the University of Bologna.
-                She Is now attending the Master Degree in Digital Humanities and Digital Knowledge at the same university. 
-                Her main interests are digital epigraphy and the creation of digital resources for classical studies in general.</p>
+              <p style="margin: 1%;">Amanda Culoma was born and raised Pantelleria, graduated in Classical Studies at
+                the University of Bologna.
+                She Is now attending the Master Degree in Digital Humanities and Digital Knowledge at the same
+                university.
+                Her main interests are digital epigraphy and the creation of digital resources for classical studies in
+                general.</p>
             </h6>
           </div>
         </div>
@@ -363,10 +319,13 @@ nd course section -->
               Ariele Santello
             </h4>
             <h6 style="text-align: center;">
-              <p style="margin: 1%;">Graduated in Modern Literature at the University of Bologna with a thesis about Weblogs.
+              <p style="margin: 1%;">Graduated in Modern Literature at the University of Bologna with a thesis about
+                Weblogs.
                 She is now attending the Digital Humanities and Digital Knowledge Master at the University of Bologna.
-                She has always been in love with culture and art and she is now trying to exploit technologies as a mean to spread cultural issues over an audience as wide as possible.
-                She loves everything related to Japan and she finds happiness in good weather and great food with good company.</p>
+                She has always been in love with culture and art and she is now trying to exploit technologies as a mean
+                to spread cultural issues over an audience as wide as possible.
+                She loves everything related to Japan and she finds happiness in good weather and great food with good
+                company.</p>
             </h6>
           </div>
         </div>
@@ -380,7 +339,8 @@ nd course section -->
             </h4>
             <h6 style="text-align: center;">
               <p style="margin: 1%;">Graduated in Modern Foreign Languages at the
-                University of Urbino and worked for a Translation and Localization Agency. She is now attending the Digital Humanities ay of Bologna.
+                University of Urbino and worked for a Translation and Localization Agency. She is now attending the
+                Digital Humanities ay of Bologna.
                 She studied abroad in UK, U.S.A and France, she loves culture, art and information technologies</p>
             </h6>
           </div>
@@ -393,7 +353,7 @@ nd course section -->
   <section class="contact_section  layout_padding">
     <div class="container">
       <div class="row">
-       <div class="col-md-6">
+        <div class="col-md-6">
           <div class="detail-box">
             <!-- <div class="heading_container">
               <h3>
@@ -411,11 +371,11 @@ nd course section -->
             <h5 style="color: #ffffff; font-weight: 600;">
               TO KNOW MORE ABOUT US
             </h5>
-              <div class="btn-box">
-                <a style="color: #ffffff;" href="https://github.com/aschimmenti/NutriData" target="_blank">
-                  Github Repository
-                </a>
-              </div>
+            <div class="btn-box">
+              <a style="color: #ffffff;" href="https://github.com/aschimmenti/NutriData" target="_blank">
+                Github Repository
+              </a>
+            </div>
           </div>
         </div>
 
@@ -446,17 +406,22 @@ nd course section -->
 
   <footer class="container-fluid footer_section">
 
-      <p>
-        Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of Bologna.
+    <p>
+      Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of
+      the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of
+      Bologna.
       <br>
       <br>
-      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" >Creative Commons Attribution-ShareAlike 4.0 International License.</a>
+      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+        Attribution-ShareAlike 4.0 International License.</a>
       <br>
       <br>
-      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
+      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img
+          alt="Creative Commons License" style="border-width:0"
+          src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
       <br>
       <br>
-      </p>
+    </p>
 
 
   </footer>
