--- a/catalogue.html
+++ b/catalogue.html
@@ -35,7 +35,7 @@
             <h3>
               Nutri
             </h3>
-            <span> data</span>
+            <span>Data</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -109,39 +109,39 @@
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: blue;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/pathologies.zip" alt="Nutritional Deficiencies dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/pathologies.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/pathologies.zip" alt="Nutritional Deficiencies dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/pathologies.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: blue;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/mortality.zip" alt="Child Mortality dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/mortality.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/mortality.zip" alt="Child Mortality dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/mortality.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: blue;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/life_expectancy.zip" alt="Life expectancy at birth dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/life_expectancy.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/life_expectancy.zip" alt="Life expectancy at birth dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/life_expectancy.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: blue;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/malnutrition.zip" alt="Malnutrition Estimates dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/malnutrition.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/malnutrition.zip" alt="Malnutrition Estimates dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/malnutrition.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: blue;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/gdp.zip" alt="GDP-per-capita dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/gdp.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/gdp.zip" alt="GDP-per-capita dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/gdp.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: blue;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/foodsupplyadequacy.zip" alt="Food supply adequacy dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/foodsupplyadequacy.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/foodsupplyadequacy.zip" alt="Food supply adequacy dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/foodsupplyadequacy.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: #0000EE;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/dailycalories.zip" alt="Daily calories dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/dailycalories.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/dailycalories.zip" alt="Daily calories dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/dailycalories.zip</a></td>
                     </tr>
                     <tr>
                       <td>Dataset</td>
-                      <td><a style="color: #0000EE;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/nutridata.zip" alt="General NutriData dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/nutridata.zip</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/tree/main/datasets/nutridata.zip" alt="General NutriData dataset URI">https://github.com/aschimmenti/NutriData/tree/main/datasets/nutridata.zip</a></td>
                     </tr>
                     <tr>
                       <td>Homepage</td>
-                      <td><a style="color: #0000EE;" href="catalogue.html" alt="Catalogue homepage" target="_blank">catalogue.html</a></td>
+                      <td><a style="color: white;" href="catalogue.html" alt="Catalogue homepage" target="_blank">catalogue.html</a></td>
                     </tr>
                     <tr>
                       <td>Language</td>
@@ -149,7 +149,7 @@
                     </tr>
                     <tr>
                       <td>Issued</td>
-                      <td>03/02/2022</td>
+                      <td>03/01/2022</td>
                     </tr>
                     <tr>
                       <td>Spatial Coverage</td>
@@ -157,11 +157,11 @@
                     </tr>
                     <tr>
                       <td>Licence</td>
-                      <td><a style="color: #0000EE;" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" alt="Licence">CC-BY-SA 4.0</a></td>
+                      <td><a style="color: white;" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" alt="Licence">CC-BY-SA 4.0</a></td>
                     </tr>
                     <tr>
                       <td>RDF-Turtle Assertion</td>
-                      <td><a style="color: #0000EE;" href="https://github.com/aschimmenti/NutriData/rdf_nutridata.ttl" alt="Link to the rdf assertion" target="_blank">https://github.com/aschimmenti/NutriData/rdf_nutridata.ttl</a></td>
+                      <td><a style="color: white;" href="https://github.com/aschimmenti/NutriData/rdf_nutridata.ttl" alt="Link to the rdf assertion" target="_blank">https://github.com/aschimmenti/NutriData/rdf_nutridata.ttl</a></td>
                     </tr>
                   </table>
                 </div>
