--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <div class="detail-box">
                     <div>
                       <h1 style="position: relative; top: 50px;">
-                        N U T R I D A T A 
+                        N U T R I D A T A
                       </h1>
                       <br>
                       <br>
@@ -104,7 +104,7 @@
                   <div class="detail-box">
                     <div>
                       <h1 style="position: relative; top: 50px;">
-                        N U T R I D A T A 
+                        N U T R I D A T A
                       </h1>
                       <br>
                       <br>
@@ -123,7 +123,7 @@
                   <div class="detail-box">
                     <div>
                       <h1 style="position: relative; top: 50px;">
-                        N U T R I D A T A 
+                        N U T R I D A T A
                       </h1>
                       <br>
                       <br>
@@ -168,8 +168,10 @@
                 About Our Project
               </h3>
               <p>
-                This project tries to show the world of young people's nutrition and in particular the problems related to it through open data. 
-                The goal is to raise awareness by making best use of the data provided by organizations that strive every day to improve the nutrition, 
+                This project tries to show the world of young people's nutrition and in particular the problems related
+                to it through open data.
+                The goal is to raise awareness by making best use of the data provided by organizations that strive
+                every day to improve the nutrition,
                 health and life of children around the world for a better future.
                 <br>
                 Learn more about the project.
@@ -226,46 +228,6 @@
 
 nd course section -->
 
-  <!-- login section -->
-
-  <!-- <section class="login_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="detail-box">
-            <h3>
-              GET ONLINE COURSES FOR FREE
-            </h3>
-            <p>
-              Create your free account now and get immediate access to 100s of
-              online courses
-            </p>
-            <a href="">
-              REGISTER NOW
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="login_form">
-            <h5>
-              Login Now
-            </h5>
-            <form action="">
-              <div>
-                <input type="email" placeholder="Email " />
-              </div>
-              <div>
-                <input type="password" placeholder="Password" />
-              </div>
-              <button type="submit">Login</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- end login section -->
 
   <!-- event section -->
   <section class="event_section layout_padding">
@@ -281,7 +243,7 @@ nd course section -->
       <div class="event_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/event-img.jpg" style="width: 50%;" alt="" />
+            <img src="images/amanda.png" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
@@ -299,20 +261,24 @@ nd course section -->
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/event-img.jpg" style="width: 50%;" alt="" />
+            <img src="images/andrea.png" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
               Andrea Schimmenti
             </h4>
             <h6 style="text-align: center;">
-              <p style="margin: 1%;">descrizioncina </p>
+              <p style="margin: 1%;">Andrea Schimmenti was born in Palermo and graduated in Classical Studies at
+                the University of Bologna.
+                He is now attending the Master Degree in Digital Humanities and Digital Knowledge at the same
+                university.
+              </p>
             </h6>
           </div>
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/ariele-santello.jpg" style="width: 50%;" alt="" />
+            <img src="images/ariele.png" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
@@ -366,6 +332,34 @@ nd course section -->
             </div> -->
           </div>
         </div>
+
+        <div class="col-md-3">
+          <div class="info_menu">
+            <h5 style="color: #ffffff; font-weight: 600;">
+              QUICK LINKS
+            </h5>
+            <ul class="navbar-nav  ">
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span
+                    class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="documentation.html"> Documentation </a>
+              </li>
+              <li class="nav-item active">
+                <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
+              </li>
+
+
+            </ul>
+          </div>
+        </div>
         <div class="col-md-3">
           <div class="info_news">
             <h5 style="color: #ffffff; font-weight: 600;">
@@ -385,15 +379,6 @@ nd course section -->
 
   <!-- end contact section -->
 
-  <!-- info section -->
-  <section class="info_section layout_padding">
-    <div class="container">
-
-    </div>
-  </section>
-
-  <!-- end info section -->
-
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
@@ -408,8 +393,7 @@ nd course section -->
 
     <p>
       Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of
-      the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of
-      Bologna.
+      the Open Access and Digital Ethics course held by Monica Palmiranimaster degree course DHDKUniversity of Bologna.
       <br>
       <br>
       This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
@@ -425,7 +409,6 @@ nd course section -->
 
 
   </footer>
-
   <!-- footer section -->
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
