--- a/documentation.html
+++ b/documentation.html
@@ -35,7 +35,7 @@
             <h3>
               Nutri
             </h3>
-            <span>data</span>
+            <span>Data</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -150,12 +150,12 @@
                        <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="https://www.healthlinkbc.ca/health-topics/ug2061" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'"> Health Link BC</a></li>
                        <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="https://www.rch.org.au/kidsinfo/fact_sheets/Nutrition_older_children/" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'"> Nutrition – school-age to adolescence</a></li>
                        <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="https://www.who.int/news-room/fact-sheets/detail/malnutrition" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'"> Malnutrition</a></li>
-                       <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="https://www.unicef.org.uk/press-releases/poor-diets-damaging-childrens-health-warns-unicef/" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'"> POOR DIETS DAMAGING CHILDREN’S HEALTH, WARNS UNICEF</a></li>
+                       <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="https://www.unicef.org.uk/press-releases/poor-diets-damaging-childrens-health-warns-unicef/" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'">Poor diets damaging children's health, warns UNICEF</a></li>
                        <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="http://www.urbanchildinstitute.org/articles/updates/nutrition-and-early-brain-development" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'"> Nutrition and Early Brain Development</a></li>
                        <li><a style="border: none; color: black; padding: 0; background-color: #ffffff;" href="https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child" target="_blank" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'">Feeding Behaviour of Infants and Young Children and Its Impact on Child Psychosocial and Emotional Development</a></li>
                    </ul>
                    <h4>General Analysis</h4>
-                      <p>To see the entire explanatory table about the general analysis click <a style="border: none; color: black; padding:0; background-color: #ffffff;" href="https://aschimmenti.github.io/NutriData/metadata.html" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'">here</a>.</p>
+                      <p>To see the entire explanatory table about the general analysis click <a style="border: none; color: black; padding:0; background-color: #ffffff;" target="_blank" href="https://aschimmenti.github.io/NutriData/metadata.html" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'">here</a>.</p>
 
                     <h4>Quality analysis</h4>
                     <p>we used different datasets from different sources to fully cover the several aspects that malnutrition among children implies:</p>
@@ -173,7 +173,7 @@
                       <p>for what concerns the overview of the dataset, the data are fully described and there are a large number of indicators to choose among, moreover, each dataset is accompanied by its corresponding metadata.
                         Data are accurate and reliable since they come from population-based sources (household surveys, civil registration systems of vital events) and institution-based sources (administrative and operational activities of institutions, such as health facilities). 
                         Availability and quality of data are guaranteed.</p>
-                    <h5 style="color: #20c997;">UNICEF</h5>
+                    <h5 style="color: #20c997;">UNICEF:</h5>
                       <p>UNICEF’s Data & Analytics (D&A) team is the global go-to for data on children.
                         It leads the collection, validation, analysis, use, and communication of the most statistically sound, internationally comparable data on the situation of children and women around the world.
                         D&A upholds the quality, integrity, and organization of these data and makes them accessible as a global public good on the data.unicef.org website.
@@ -267,7 +267,7 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
                     So the organization share the same aim of UNICEF in supporting countries and to strengthen their capacities to make informed decisions.</p>
 
                   <h4>Technical analysis</h4>
-                  <p>To see the entire explanatory table about technical analysis of datasets click here.</p>
+                  <p>To see the entire explanatory table about technical analysis of datasets click <a style="border: none; color: black; padding:0; background-color: #ffffff;" target="_blank" href="metadata.html" onmouseover="this.style.color='#20c997'" onmouseout="this.style.color='black'">here</a>.</p>
 
                   <h4>Mashup and output datasets</h4>
                   <p>In order to manage the mash-up of different datasets we followed the Guidelines on FAIR Data Management in Horizon 2020.
@@ -333,10 +333,11 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
 
   <!-- contact section -->
 
+
   <section class="contact_section  layout_padding">
     <div class="container">
       <div class="row">
-       <div class="col-md-6">
+        <div class="col-md-6">
           <div class="detail-box">
             <!-- <div class="heading_container">
               <h3>
@@ -356,14 +357,15 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
               QUICK LINKS
             </h5>
             <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span
+                    class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="documentation.html"> Documentation </a>
               </li>
-              <li class="nav-item">
-                <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata  </a>
+              <li class="nav-item active">
+                <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata </a>
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
@@ -371,6 +373,7 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
               </li>
+
 
             </ul>
           </div>
@@ -380,11 +383,11 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
             <h5 style="color: #ffffff; font-weight: 600;">
               TO KNOW MORE ABOUT US
             </h5>
-              <div class="btn-box">
-                <a style="color: #ffffff;" href="https://github.com/aschimmenti/NutriData" target="_blank">
-                  Github Repository
-                </a>
-              </div>
+            <div class="btn-box">
+              <a style="color: #ffffff;" href="https://github.com/aschimmenti/NutriData" target="_blank">
+                Github Repository
+              </a>
+            </div>
           </div>
         </div>
 
@@ -406,17 +409,21 @@ CRE provides clear and action-oriented advice in a secure and confidential envir
 
   <footer class="container-fluid footer_section">
 
-      <p>
-        Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of Bologna.
+    <p>
+      Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of
+      the Open Access and Digital Ethics course held by Monica Palmiranimaster degree course DHDKUniversity of Bologna.
       <br>
       <br>
-      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" >Creative Commons Attribution-ShareAlike 4.0 International License.</a>
+      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+        Attribution-ShareAlike 4.0 International License.</a>
       <br>
       <br>
-      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
+      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img
+          alt="Creative Commons License" style="border-width:0"
+          src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
       <br>
       <br>
-      </p>
+    </p>
 
 
   </footer>
