--- a/visualizations.html
+++ b/visualizations.html
@@ -74,7 +74,7 @@
             <h3>
               Nutri
             </h3>
-            <span> data</span>
+            <span>Data</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -192,14 +192,14 @@
               QUICK LINKS
             </h5>
             <ul class="navbar-nav  ">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span
                     class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="documentation.html"> Documentation </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata </a>
               </li>
               <li class="nav-item">
@@ -229,6 +229,7 @@
       </div>
     </div>
   </section>
+
   <!-- end contact section -->
 
   <!-- footer section -->
@@ -245,8 +246,7 @@
 
     <p>
       Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of
-      the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of
-      Bologna.
+      the Open Access and Digital Ethics course held by Monica Palmiranimaster degree course DHDKUniversity of Bologna.
       <br>
       <br>
       This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
