--- a/metadata.html
+++ b/metadata.html
@@ -115,7 +115,6 @@
                       Institute for Health Metrics and Evaluation, namely, from the GBD section, Global Burden of
                       Disease. The dataset focuses on nutritional disorders and deficiencies of individuals whose age
                       mainly ranges from 5 to 19 years old (adolescents).</p>
-                    <p class="card-text"><span class="category">Modified</span>: 20/11/2021</p>
                     <p class="card-text"><span class="category">Source</span>: IHME-GBD_2019_DATA-27a144e6-1.csv, 
                       IHME GBD API<a href="http://ghdx.healthdata.org/gbd-results-tool"
                         target="_blank"> (link to the source)</a>. The dataset was created as a merge from various dataset (asthma, iron deficiency, vitamin A deficiency, diabetes mellitus II, protein energy malnutrition, liver-related diseases)  downloaded from the IHME-GBD API (for reproduction: all locations; all years; context: cause; years: 0-19; metric: percentage; measure: incidence;)</p>
@@ -299,7 +298,7 @@
                     <p class="card-text"><span class="category">Description</span>: This dataset presents the core set
                       of food security indicators. Indicators are classified along the four dimensions of food security
                       -- availability, access, utilization and stability; data were filtered by the featured indicator
-                      "Average dietary energy supply adequacy (percent) (3-year average)</p>
+                      "Average dietary energy supply adequacy (percent) (3-year average)"</p>
                     <p class="card-text"><span class="category">Source</span>: foodsupplyadequacy.csv <a
                         href="https://www.fao.org/faostat/en/?#data/FS" target="_blank">
                          (link to the source) </a> </p>
