--- a/metadata.html
+++ b/metadata.html
@@ -89,7 +89,7 @@
               <li><a href="#lifexp">Life Expectancy</a></li>
               <li><a href="#nutriest">Malnutrition Estimates Dataset</a></li>
               <li><a href="#nutrigdp">GDP per capita Dataset</a></li>
-              <li><a href="#nutrind">Food Insecurity Indicators</a></li>
+              <li><a href="#nutrind">Food Security Indicators</a></li>
               <li><a href="#nutrical">Daily per capita Supply of Kilocalories</a></li>
               <li><a href="#checklist">Download Checklist and RDF assertion of the metadata</a></li>
             </ul>
@@ -292,9 +292,9 @@
               <div class="col">
                 <div id="nutrind" class="metadata-content card">
                   <div class="card-body">
-                    <h4 class="card-title">Food Insecurity Indicators</h4>
+                    <h4 class="card-title">Food Security Indicators</h4>
                     <p class="card-text"><span class="category">Identifier</span>: https://aschimmenti.github.io/NutriData/</p>
-                    <p class="card-text"><span class="category">Title</span>: NutriData Food Insecurity Indicators</p>
+                    <p class="card-text"><span class="category">Title</span>: NutriData Food Security Indicators</p>
                     <p class="card-text"><span class="category">Description</span>: This dataset presents the core set
                       of food security indicators. Indicators are classified along the four dimensions of food security
                       -- availability, access, utilization and stability; data were filtered by the featured indicator
@@ -302,7 +302,7 @@
                     <p class="card-text"><span class="category">Source</span>: foodsupplyadequacy.csv <a
                         href="https://www.fao.org/faostat/en/?#data/FS" target="_blank">
                          (link to the source) </a> </p>
-                    <p class="card-text"><span class="category">Theme</span>: Food Insecurity Indicators</p>
+                    <p class="card-text"><span class="category">Theme</span>: Food Security Indicators</p>
                     <p class="card-text"><span class="category">Format</span>: CSV, JSON</p>
                     <p class="card-text"><span class="category">Periodicity</span>: Annual</p>
                     <p class="card-text"><span class="category">Rights Holder</span>: FAO - Food and Agriculture
